changed contrast ratio for better accessibility

--- a/assets/style.css
+++ b/assets/style.css
@@ -129,7 +129,7 @@ h2.about-me__title {
 .nav-pills .show>.nav-link,
 .nav-pills .nav-link.active-tag {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #8F8A34;
 	border-radius: 0;
 }
 
